fixed padding, text-decoration and letter spacing of the button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,22 +37,28 @@
   display: left;
   font-size: 20px;
   margin-left: -50px;
+  margin-bottom: 50px;
   padding-right: 550px;
 }
 
 .btn_home {
+  color: white;
+  letter-spacing: 2px;
+  font-weight: bolder;
+  font-size: 20px;
+  text-decoration: none;
   margin-left: -50px;
   background-color: #00303F;
   border: 2px solid #00303F;
-  border-radius: 4px
+  border-radius: 5px;
+  padding: 16px 34px;
 }
 
 .btn_home:hover {
-  color: #5B5B5B;
-  margin-left: -50px;
+  text-decoration: none;
+  color:  #00303F;
   background-color: #CCFFBD;
   border: 2px solid #CCFFBD;
-  border-radius: 4px
 }
 
 .navbar-brand {
